--- a/views/myProfile.ejs
+++ b/views/myProfile.ejs
@@ -27,7 +27,7 @@
   </div>
 </nav>
 <form action="/edit/profile?_method=PUT" method="POST">
-	<img src="https://grandview.run-us-west2.goorm.io/image/<%= user.photo %>" class="img-thumbnail" style="width: 200px; height: 200px;">
+	<img src="https://grand-view.herokuapp.com/image/<%= user.photo %>" class="img-thumbnail" style="width: 200px; height: 200px;">
 	<a class="btn btn-primary" href="/photo" style="display: block">Change My Profile Picture</a>
   <div class="form-group">
     <label for="name">Name</label>
