--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,7 +30,7 @@
 	<% if(profile.photo){ %>
 		   <img src="http://grand-view.herokuapp.com/image/<%= profile.photo %>" alt="{{ image }}" class="card-img-top">
 	<% } else { %>
-		<img src="http://grand-view.herokuapp.com/image/84941b39d22531eba8b409f6a9b8969b.png" alt="{{ image }}" class="card-img-top">
+		<img src="http://grand-view.herokuapp.com/image/7f03fb0337f736dbac24841dcc5257a7.jpg" alt="{{ image }}" class="card-img-top">
 	<% } %>
   <div class="card-body">
 
