added some logic

--- a/views/beta.ejs
+++ b/views/beta.ejs
@@ -105,8 +105,12 @@
 		<h5>Developed By: <a href="/profile/5f5b84113c90da046d1df8fa">Mourad Sherif</a></h5>
 		<a href="https://www.google.com/maps/@30.9737307,29.6599599,15.5z"><img src="http://grand-view.herokuapp.com/image/6622f0c30cf7d249ab545f0ee7f63590.PNG"></a>
 		<div style="display: block">
-			<a href="/users/login" class="btn btn-lg btn-primary">Log In</a>
-			<a href="/users/register" class="btn btn-lg btn-secondary">Register</a>
+			<% if(user){ %>
+				<a href="/home" class="btn btn-lg btn-primary">Home Page</a>
+			<% } else { %>
+				<a href="/users/login" class="btn btn-lg btn-primary">Log In</a>
+				<a href="/users/register" class="btn btn-lg btn-secondary">Register</a>
+			<% } %>
 		</div>
     </div>
     
