--- a/views/home.ejs
+++ b/views/home.ejs
@@ -347,7 +347,7 @@
 </div>
 <% }) %>
 <% events.forEach(event => { %>
-<% if(suggestions.indexOf(suggestion) == 0){ %>
+<% if(events.indexOf(event) == 0){ %>
 <div class="ui card" id="events">
 	<div class="content">
 		 <div class="right floated meta"><%= event.voteBy %></div>
