--- a/views/home.ejs
+++ b/views/home.ejs
@@ -313,7 +313,7 @@
   </div>
 	 <div class="extra content">
       <button class='reserve'>
-        <img class='reserveImg' src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQq8N3dSWad5RKfCiLsW70dLYbs88dwOuRUgg&usqp=CAU"> 50
+        <img class='reserveImg' src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQq8N3dSWad5RKfCiLsW70dLYbs88dwOuRUgg&usqp=CAU">
       </button>
     </div>
 </div>
