--- a/views/register.ejs
+++ b/views/register.ejs
@@ -78,8 +78,7 @@
             name="bio"
             class="form-control"
             placeholder="bio"
-            value="<%= typeof bio != 'undefined' ? bio : '' %>"
-			></textarea>
+			><%= bio %></textarea>
         </div>
 		<label for="pass">Phone Number(Optional)</label>
           <input
