--- a/views/home.ejs
+++ b/views/home.ejs
@@ -312,9 +312,11 @@
 	  </form>
   </div>
 	 <div class="extra content">
+	 <form action="/reserve/service/%= service._id %>" method="POST">
       <button class='reserve'>
         <img class='reserveImg' src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQq8N3dSWad5RKfCiLsW70dLYbs88dwOuRUgg&usqp=CAU">
       </button>
+      <form>
     </div>
 </div>
 <div class="ui threaded comments">
@@ -379,9 +381,11 @@
 	  </form>
   </div>
 	<div class="extra content">
+       <form action="/reserve/event/%= event._id %>" method="POST">
       <button class='reserve'>
         <img class='reserveImg' src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQq8N3dSWad5RKfCiLsW70dLYbs88dwOuRUgg&usqp=CAU">
       </button>
+      <form>
     </div>
 </div>
 <div class="ui threaded comments">
