--- a/views/home.ejs
+++ b/views/home.ejs
@@ -312,10 +312,10 @@
 	  </form>
   </div>
 	 <div class="extra content">
-	 <% if(complain.author.id == user._id){ %>
-		<a class="btn btn-secondary" href="/complain/image/<%= complain._id %>">Add An Image</a>
-		<a class="btn btn-primary" href="/complain/status/<%= complain._id %>">View Complain Status</a>
-		<form action="/delete/complain/<%= complain._id %>?_method=DELETE" method="POST">
+	 <% if(service.author.id == user._id){ %>
+		<a class="btn btn-secondary" href="/service/image/<%= service._id %>">Add An Image</a>
+		<a class="btn btn-primary" href="/reservers/service/<%= service._id %>">View Reservers</a>
+		<form action="/delete/service/<%= service._id %>?_method=DELETE" method="POST">
 			<button class="btn btn-danger btn-block">Delete</button>
 		</form>
 	<% } else { %>
