--- a/views/home.ejs
+++ b/views/home.ejs
@@ -370,7 +370,7 @@
 		<% if(!event.image){ %>
 			<img src="https://semantic-ui.com/images/wireframe/image.png">
 		<% } else { %>
-			<img class="ui avatar image" src="http://grand-view.herokuapp.com/image/<%= event.image %>">
+			<img src="http://grand-view.herokuapp.com/image/<%= event.image %>">
 		<% } %>
 	</div>
 	<h1>
