--- a/views/register.ejs
+++ b/views/register.ejs
@@ -71,7 +71,7 @@
             value="<%= typeof apartment != 'undefined' ? apartment : '' %>"
           />
         </div>
-          <label for="bio">bio</label>
+          <label for="bio">About (Optional)</label>
           <textarea
             type="text"
             id="bio"
@@ -81,7 +81,7 @@
 			>
 		</textarea>
         </div>
-		<label for="pass">Phone Number(Optional)</label>
+		<label for="pass">Phone Number</label>
           <input
             type="number"
             id="number"
