--- a/views/home.ejs
+++ b/views/home.ejs
@@ -287,7 +287,7 @@
 		<div class="content">
     <div class="right floated meta"><%= service.created %> <%= service.createdTime %></div>
     <img class="ui avatar image" src="http://grand-view.herokuapp.com/image/<%= service.author.image %>">
-		<%= service.username %> 
+		<%= service.author.username %> 
 	</div>
 	<div class="image">
 		<% if(!service.image){ %>
