--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,10 @@
+<script>
+	function dark() {
+		document.documentElement.classList.toggle("dark-mode")
+			document.querySelectorAll(".inverted").forEach((result) => {
+			result.classList.toggle("invert")	
+		})
+	}
+</script>
 </body>
 </html>
