--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,9 @@
 <script>
-	const root = document.querySelector(":root")
+	const root = document.querySelector(":root");
+	const body = document.querySelector("body");
 	function dark() {
 		root.classList.toggle("dark-mode")
+		body.classList.toggle("dark-mode")
 			document.querySelectorAll(".inverted").forEach((result) => {
 			result.classList.toggle("invert")	
 		})
