--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,9 +2,9 @@
 	const root = document.querySelector(":root");
 	const body = document.querySelector("body");
 	function dark() {
-		root.classList.toggle("dark-mode")
-		body.classList.toggle("dark-mode")
-			document.querySelectorAll(".inverted").forEach((result) => {
+		root.classList.toggle("dark-mode");
+		body.classList.toggle("back")
+		document.querySelectorAll(".inverted").forEach((result) => {
 			result.classList.toggle("invert")	
 		})
 	}
