--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -76,6 +76,9 @@
 		.invert {
 			filter: invert(1)
 		}
+		.back {
+			background: black;
+		}
 </style>
 <link rel="icon" href="/imgs/1.jpg">
 	</head>
