--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %><html>
+<html>
 	<head>
 		<title>Grand View</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
