--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,92 @@
-<%- include("./partials/header.ejs") %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/journal/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<style>
+		.card {
+			display: flex;
+			flex-wrap: wrap;
+			flex-grow: 1; 
+			flex-basis: 200px;
+			margin-bottom: 	10px;
+		}	
+		.icons {
+			width: 50px;
+			height: 50px;
+		}
+		.vote {
+			max-width: 100%;
+			min-height: 0!important;
+			flex-grow: 0;
+			border-top: 1px solid rgba(0,0,0,.05)!important;
+			position: static;
+			background: 0 0;
+			width: auto;
+			margin: 0 0;
+			padding: .75em 1em;
+			top: 0;
+			left: 0;
+			color: rgba(0,0,0,.4);
+			-webkit-box-shadow: none;
+			box-shadow: none;
+			-webkit-transition: color .1s ease;
+			transition: color .1s ease;
+			display: inline;
+	}
+		.voteImage {
+			width: 100%;
+		}
+		.vote {
+			background-color: #fff;
+			outline: none;
+			border: none;
+			width: 100px;
+		}
+		.reserve {
+			background-color: #fff;
+			outline: none;
+			border: none;
+			width: fit-content;
+		}
+		.reserve:focus {
+			outline: none
+		}
+		.vote:focus {
+			outline: none
+		}
+		#right:hover {
+			background-color: green;
+		}
+		#wrong:hover {
+			background-color: red;
+		}
+		.reserveImg {
+			height: 100px;
+			width: auto;
+			margin-left: 50px;
+		}
+		.form {
+			display: inline;
+		}
+		.dark-mode {
+			filter: invert(1)
+		}
+		.invert {
+			filter: invert(1)
+		}
+    <title>Grand View</title>
+  </head>
+  <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="/">Grand View</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
