--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,5 +1,77 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-<link rel="stylesheet" href="./main.css">
+<style>
+.card {
+			display: flex;
+			flex-wrap: wrap;
+			flex-grow: 1; 
+			flex-basis: 200px;
+			margin-bottom: 	10px;
+		}	
+		.icons {
+			width: 50px;
+			height: 50px;
+		}
+		.vote {
+			max-width: 100%;
+			min-height: 0!important;
+			flex-grow: 0;
+			border-top: 1px solid rgba(0,0,0,.05)!important;
+			position: static;
+			background: 0 0;
+			width: auto;
+			margin: 0 0;
+			padding: .75em 1em;
+			top: 0;
+			left: 0;
+			color: rgba(0,0,0,.4);
+			-webkit-box-shadow: none;
+			box-shadow: none;
+			-webkit-transition: color .1s ease;
+			transition: color .1s ease;
+			display: inline;
+	}
+		.voteImage {
+			width: 100%;
+		}
+		.vote {
+			background-color: #fff;
+			outline: none;
+			border: none;
+			width: 100px;
+		}
+		.reserve {
+			background-color: #fff;
+			outline: none;
+			border: none;
+			width: fit-content;
+		}
+		.reserve:focus {
+			outline: none
+		}
+		.vote:focus {
+			outline: none
+		}
+		#right:hover {
+			background-color: green;
+		}
+		#wrong:hover {
+			background-color: red;
+		}
+		.reserveImg {
+			height: 100px;
+			width: auto;
+			margin-left: 50px;
+		}
+		.form {
+			display: inline;
+		}
+		.dark-mode {
+			filter: invert(1)
+		}
+		.invert {
+			filter: invert(1)
+		}
+</style>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="/">Grand View</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
