--- a/views/home.ejs
+++ b/views/home.ejs
@@ -470,7 +470,7 @@
 		 <div class="extra content">
 		<% if(event.author.id == user._id){ %>
 		<a class="btn btn-secondary btn-block inverted" href="/event/image/<%= event._id %>" style="color: white">Add An Image</a>
-		<a class="btn btn-primary btn-block inverted" href="/voters/<%= event._id %>" style="color: white">View Reservers</a>
+		<a class="btn btn-primary btn-block inverted" href="/reservers/event/<%= event._id %>" style="color: white">View Reservers</a>
 		<form action="/delete/event/<%= event._id %>?_method=DELETE" method="POST">
 			<button class="btn btn-danger btn-block inverted">Delete</button>
 		</form>
