--- a/views/reservers.ejs
+++ b/views/reservers.ejs
@@ -1,10 +1,8 @@
-if(!profiles) {
+<% if(!profiles) { %>
 <div class="jumbotron">
   <h1 class="display-4"No Reserves Yet</h1>
   <p class="lead">NO One Has Reserved Yet When They Reserve They Will Appear Here</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  <a class="btn btn-primary btn-lg" href="#" role="button">Return Back</a>
 </div>
 } else {
 <% profiles.forEach(profile => { %>
@@ -16,4 +14,4 @@ if(!profiles) {
 	  </div>
 	</div>
 	<% }) %>
-	}
+	<% } %> 
