--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
