--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header.ejs") %>
+<%- include('./partials/header.ejs')%>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="/">Grand View</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
