--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,6 @@
-<html>
-	<head>
-		<title>Grand View</title>
+
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<style>
 		.card {
 			display: flex;
@@ -76,5 +73,4 @@
 		.invert {
 			filter: invert(1)
 		}
-	</head>
-	<body>
+</style>
