--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,78 +1,5 @@
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"> -->
 <%- include('./partials/header.ejs') %>
-<style>
-.card {
-			display: flex;
-			flex-wrap: wrap;
-			flex-grow: 1; 
-			flex-basis: 200px;
-			margin-bottom: 	10px;
-		}	
-		.icons {
-			width: 50px;
-			height: 50px;
-		}
-		.vote {
-			max-width: 100%;
-			min-height: 0!important;
-			flex-grow: 0;
-			border-top: 1px solid rgba(0,0,0,.05)!important;
-			position: static;
-			background: 0 0;
-			width: auto;
-			margin: 0 0;
-			padding: .75em 1em;
-			top: 0;
-			left: 0;
-			color: rgba(0,0,0,.4);
-			-webkit-box-shadow: none;
-			box-shadow: none;
-			-webkit-transition: color .1s ease;
-			transition: color .1s ease;
-			display: inline;
-	}
-		.voteImage {
-			width: 100%;
-		}
-		.vote {
-			background-color: #fff;
-			outline: none;
-			border: none;
-			width: 100px;
-		}
-		.reserve {
-			background-color: #fff;
-			outline: none;
-			border: none;
-			width: fit-content;
-		}
-		.reserve:focus {
-			outline: none
-		}
-		.vote:focus {
-			outline: none
-		}
-		#right:hover {
-			background-color: green;
-		}
-		#wrong:hover {
-			background-color: red;
-		}
-		.reserveImg {
-			height: 100px;
-			width: auto;
-			margin-left: 50px;
-		}
-		.form {
-			display: inline;
-		}
-		.dark-mode {
-			filter: invert(1)
-		}
-		.invert {
-			filter: invert(1)
-		}
-</style>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="/">Grand View</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -279,41 +206,44 @@
 <% if(posts.indexOf(post) == 0){ %>
 <div class="ui card" id="posts">
 	<div class="content">
+		 <div class="right floated meta"><%= post.type %></div>
 		Post
 	</div>
-	<% } else { %>
+	<% }else { %>
 	<div class="ui card">
 	<div class="content">
-		Post
+		 <div class="right floated meta"><%= post.type %></div>
+		Complain
 	</div>
 		<% } %>
 		<div class="content">
     <div class="right floated meta"><%= post.created %> <%= post.createdTime %></div>
 	<a href="/profile/<%= post.author.id %>" class="inverted">
-	<img class="ui avatar image" src="http://grand-view.herokuapp.com/image/<%= post.author.image %>">
+    <img class="ui avatar image" src="http://grand-view.herokuapp.com/image/<%= post.author.image %>">
 		<%= post.author.username %>
 			</a>
 	</div>
 	<div class="image">
 		<% if(!post.image){ %>
-		<img src="https://semantic-ui.com/images/wireframe/image.png" class="inverted">
+			<img src="https://semantic-ui.com/images/wireframe/image.png" class="inverted">
 		<% } else { %>
-			<img src="https://grand-view.herokuapp.com/image/<%= post.image %>" class="inverted">
+			<img src="http://grand-view.herokuapp.com/image/<%= post.image %>" class="inverted">
 		<% } %>
 	</div>
 	<h1>
 		<%= post.title %>
-	</h1>  
+	</h1>
 	<p>
-		<%= post.post %>
-	</p>  
+		<%= post.body %>
+	</p>
 	<% if(post.author.id == user._id){ %>
 		<a class="btn btn-secondary inverted" href="/post/image/<%= post._id %>">Add An Image</a>
-		<form action="/delete/post/<%= post._id %>?_method=DELETE" method="POST">
+		<a class="btn btn-primary inverted" href="/post/status/<%= post._id %>">View Complain Status</a>
+		<form action="/delete/complain/<%= complain._id %>?_method=DELETE" method="POST">
 			<button class="btn btn-danger btn-block inverted">Delete</button>
 		</form>
 	<% } %>
-  <div class="extra content">
+<div class="extra content">
 	  <form action="/comment/Post/<%= post._id %>" method="POST">
 		<div class="ui large transparent left icon input">
       		<i class="comment icon"></i> <input type="text" placeholder="Add Comment..." name="comment">
@@ -322,7 +252,7 @@
     	</div>
 	  </form>
   </div>
-	</div>
+</div> 
 <div class="ui threaded comments" id="<%= post._id %>">
   <h3 class="ui dividing header">Comments</h3>
 	<% for(var i = 0; i < post.comments.length; i++){ %>
