--- a/views/home.ejs
+++ b/views/home.ejs
@@ -206,9 +206,10 @@
 <div class="ui card">
   <div class="content">
 <% if(posts.indexOf(post) == 0){ %>
-    <div class="header" id="#posts"><%= post.title %></div>
-<% } %>
+    <div class="header" id="posts"><%= post.title %></div>
+<% } else { %>
     <div class="header"><%= post.title %></div>
+<% } %>
     <div class='meta'>
     	<a href="/profile/<%= post.author.id %> "><%= post.author.name %></a>
     </div>
